tdf#150974 Writer crashes when starting with WollMux installed

regression from
    commit b2aa646ef09dc8434d3ca8a5bba53a8d8ff3f910
    Author: Caolán McNamara <caolanm@redhat.com>
    Date:   Wed Dec 15 11:43:32 2021 +0000
    use more OInterfaceContainerHelper3 in toolkit

Change-Id: I26532ea79b7c5f750b4bf693881cbf41aeb82266
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140077
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>